--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,7 +23,8 @@ linter:
   # producing the lint.
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
+    must_be_immutable: false
+    use_build_context_synchronously: false
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
